basic lambda test function with SAM

--- a/.readme.md
+++ b/.readme.md
@@ -1,1 +1,11 @@
+## AWS SAM (Serverless Application Model)
 
+---
+
+### Steps for creating sample lambda function with SAM
+
+1. Install SAM CLI and Docker in your system.
+2. `sam init` - to initiate sam lambda starter template
+3. Edit template.yaml file according to your preference
+4. start api locally to test - `sam local start-api`
+5. Push the lambda function to the AWS cloud formation stack `sam deploy --guided`
